--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 *
-* CSS styles for brankej.github.io
+* CSS styles for the gspritzt project
 *
 */
 
@@ -11,7 +11,35 @@ body {
     font-family: "Open Sans"; /* Source: https://fonts.google.com/specimen/Open+Sans */
 }
 
+#header {
+    text-align: center;
+    background-color: dodgerblue;
+    background-image: url('images/glacier.jpg');
+    background-repeat: no-repeat;
+    height: 360px;
+}
+#header h2 {
+    font-size: 4em;
+    padding: 1em 0;
+    margin: 0;
+    text-shadow: 2px 2px 4px #000000;
+}
+#header h3 {
+    font-size: 2em;
+    margin: 0;
+    text-shadow: 2px 2px 4px #000000;
+}
 
+#footer {
+    width: 100%;
+    padding: 1em 0 3em 0;
+}
+#footer .back {
+    float: left;
+}
+#footer .next {
+    float: right;
+}
 
 a:link, a:visited {
     color: black;
