--- a/style_map.css
+++ b/style_map.css
@@ -1,6 +1,6 @@
 /*
 *
-* CSS styles for the Bike Trail Tirol project
+* CSS styles for the gspritzt project
 *
 */
 
@@ -25,7 +25,7 @@ body {
 }
 #header h3 {
     font-size: 2em;
-    margin: 0;        
+    margin: 0;
     text-shadow: 2px 2px 4px #000000;
 }
 
