--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,23 @@
-html, body {
-  width: 100%;
-  height: 95%;
-  margin: 0;
-  font-family: "Open Sans"; /* Source: https://fonts.google.com/specimen/Open+Sans */
+/*
+*
+* CSS styles for the gspritzt project
+*
+*/
+
+
+body {
+    max-width: 1280px;
+    margin: auto;
+    font-family: "Open Sans"; /* Source: https://fonts.google.com/specimen/Open+Sans */
 }
 
-#map1, #map2 {
-  width: 49.5%;
-  height: 100%;
+#header {
+    text-align: center;
+    background-color: dodgerblue;
+    background-image: url('images/glacier.jpg');
+    background-repeat: no-repeat;
+    height: 360px;
 }
-
-#map1 { float: left; }
-#map2 { float: right; }
-
-.basemaps-wrapper {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    z-index: 1000;
-}
-
-#map1basemaps { left: 10px; }
-#map2basemaps { left: calc(50.5% + 10px); }
-
 #header h2 {
     font-size: 4em;
     padding: 1em 0;
