--- a/style_map.css
+++ b/style_map.css
@@ -13,7 +13,7 @@ body {
 #header {
     text-align: center;
     background-color: dodgerblue;
-    background-image: url('images/glacier.jpg');
+    background-image: url('images/Umbal_Kees_klein.jpg');
     background-repeat: no-repeat;
     height: 360px;
 }
