--- a/style_index.css
+++ b/style_index.css
@@ -4,6 +4,7 @@
 *
 */
 
+
 body {
     max-width: 1280px;
     margin: auto;
@@ -13,7 +14,7 @@ body {
 #header {
     text-align: center;
     background-color: dodgerblue;
-    background-image: url('images/Umbal_Kees_klein.jpg');
+    background-image: url('images/glacier.jpg');
     background-repeat: no-repeat;
     height: 360px;
 }
@@ -52,19 +53,11 @@ body {
 }
 
 
-
-#map {
-    width: 100%;
-    height: 760px;
-    border: 1px solid gray;
-}
-
 #footer {
     width: 100%;
     padding: 1em 0 3em 0;
     font-size: 0.75em;
 }
-
 
 a:link, a:visited {
     color: black;
