--- a/style_map.css
+++ b/style_map.css
@@ -32,7 +32,7 @@ body {
 /* Style the top navigation bar */
 .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: #6E6E6E;
 }
 
 /* Style the topnav links */
