--- a/style_index.css
+++ b/style_index.css
@@ -4,7 +4,6 @@
 *
 */
 
-
 body {
     max-width: 1280px;
     margin: auto;
@@ -31,14 +30,20 @@ body {
 }
 
 /* Style the top navigation bar */
-.topnav {
-    overflow: hidden;
+.topnav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;;
     background-color: #6E6E6E;
 }
 
 /* Style the topnav links */
-.topnav a {
-    float: left;
+.topnav li {
+  float: left;
+}
+
+.topnav li a {
     display: block;
     color: #f2f2f2;
     text-align: center;
@@ -47,11 +52,15 @@ body {
 }
 
 /* Change color on hover */
-.topnav a:hover {
+.topnav li a:hover:not(.active) {
     background-color: #ddd;
     color: black;
 }
 
+/* show color on active link */
+.active {
+    background-color: #3182bd; /*http://colorbrewer2.org/#type=sequential&scheme=Blues&n=3*/
+}
 
 #footer {
     width: 100%;
