--- a/style_relationmap.css
+++ b/style_relationmap.css
@@ -76,23 +76,9 @@ html, body {
 #map1 { float: left; }
 #map2 { float: right; }
 
-.basemaps-wrapper {
-    position: absolute;
-    top: 495px; /* absolute pixels from top */
-    left: 10px; /
-    z-index: 1000;
-}
-
-#map1basemaps {
-  /*position: relative;*/
-   left: 325px;
-   z-index: 1000;
-} /* absolute pixels from left side 325px*/
-
-
 /* #####################################*/
 
-.legend {
+.legend_drop,.legend {
 	line-height: 18px;
 	color: #333333;
 	font-family: 'Open Sans';
@@ -101,26 +87,6 @@ html, body {
 	background: rgba(255,255,255,0.8);
 	box-shadow: 0 0 15px rgba(0,0,0,0.2);
 	border-radius: 5px;
-}
-
-.legend i {
-	width: 18px;
-	height: 18px;
-	float: left;
-	margin-right: 8px;
-	opacity: 0.7;
-}
-
-.legend img {
-	width: 18px;
-	height: 18px;
-	float: left;
-}
-
-.legend p {
-	font-size: 12px;
-	line-height: 18px;
-	margin: 0;
 }
 
 /* #####################################*/
