--- a/style_index.css
+++ b/style_index.css
@@ -62,6 +62,15 @@ body {
     background-color: #3182bd; /*http://colorbrewer2.org/#type=sequential&scheme=Blues&n=3*/
 }
 
+.article figure figcaption  {
+    margin-left: -12em;
+    width: 11.5em;
+    font-size: 0.8em;
+    float: left;
+    /*width: 33.33%; *//* three containers (use 25% for four, and 50% for two, etc) */
+    padding: 10px; /* if you want space between the images */
+}
+
 #footer {
     width: 100%;
     padding: 1em 0 3em 0;
